Fix Layout of We Are and Projects and color ob navbar collapse

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1016,10 +1016,14 @@ footer .icon-f {
 }
 
 @media screen and (max-width: 320px) {
-  /* body {
-    background-color: red;
-  } */
-
+  .navbar-default .navbar-collapse {
+    background: linear-gradient(
+      114deg,
+      rgba(0, 133, 122, 0.8) 0%,
+      rgba(29, 108, 135, 0.8) 50%,
+      rgba(54, 91, 151, 0.8) 100%
+    );
+  }
   .filters {
     display: flex;
     flex-direction: column;
@@ -1150,7 +1154,7 @@ footer .icon-f {
   }
 
   .weare .col-md-3 {
-    display: none;
+    /* display: none; */
     padding: 10px;
   }
 
@@ -1162,7 +1166,7 @@ footer .icon-f {
     top: -10px;
   }
   .overlay-bg h3 {
-    font-size: 25px;
+    font-size: 15px;
   }
 
   .weare-one,
@@ -1189,9 +1193,14 @@ footer .icon-f {
   }
 }
 @media screen and (min-width: 320px) {
-  /* body {
-    background-color: red;
-  } */
+  .navbar-default .navbar-collapse {
+    background: linear-gradient(
+      114deg,
+      rgba(0, 133, 122, 0.8) 0%,
+      rgba(29, 108, 135, 0.8) 50%,
+      rgba(54, 91, 151, 0.8) 100%
+    );
+  }
 
   .filters {
     display: flex;
@@ -1294,11 +1303,8 @@ footer .icon-f {
 
   /* PROJECTS */
   .work-grid {
-    padding: 20px;
-  }
-
-  .work-grid .row {
-    margin-left: -15px !important;
+    padding: 20px 0;
+    /* padding: 20px; */
   }
 
   .work-grid .col-md-6,
@@ -1323,7 +1329,7 @@ footer .icon-f {
   }
 
   .weare .col-md-3 {
-    display: none;
+    /* display: none; */
     padding: 10px;
   }
 
@@ -1335,7 +1341,7 @@ footer .icon-f {
     top: -10px;
   }
   .overlay-bg h3 {
-    font-size: 25px;
+    font-size: 20px;
   }
 
   .weare-one,
@@ -1373,15 +1379,6 @@ footer .icon-f {
 
   .text-showcase p {
     font-size: 55px;
-  }
-
-  .navbar-default .navbar-collapse {
-    background: linear-gradient(
-      114deg,
-      rgba(0, 133, 122, 0.8) 0%,
-      rgba(29, 108, 135, 0.8) 50%,
-      rgba(54, 91, 151, 0.8) 100%
-    );
   }
 
   .title-project {
@@ -1509,6 +1506,9 @@ footer .icon-f {
   }
 
   /* PROJECTS */
+  .work-grid {
+    padding: 20px 30px;
+  }
   .work-grid .col-md-4 {
     height: 325px;
   }
